# StyleBertVits2-VoiceChanger

./: NOTICE  pyproject.toml  start_voice_changer.bat
docs/: architecture.md
src/app/: __init__.py  config.py  main.py
src/app/audio/: __init__.py  capture.py  devices.py
src/app/emotion/: prosody_analyzer.py  text_analyzer.py
src/app/gui/: __init__.py  main_window.py
src/app/output/: opus_streamer.py  system_playback.py
src/app/pipeline/: __init__.py  voice_pipeline.py
src/app/style/: fusion.py  tts_engine.py
src/app/transcription/: __init__.py  whisper_service.py
src/app/vc/: __init__.py  content_encoder.py  f0.py  generator.py
