[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stylebertvits2_voice_changer"
version = "0.1.0"
description = "Voice conversion pipeline integrating Whisper, emotion analysis, and StyleBertVits2 synthesis with GUI and Discord streaming."
authors = [{ name = "Cascade AI" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchaudio",
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "PySide6>=6.7.0",
    "onnxruntime-gpu>=1.17.0",
    "opuslib>=3.0.1",
    "loguru>=0.7.0",
    "pydantic>=2.5",
    "transformers>=4.40.0",
    "safetensors>=0.4.2",
    "pyworld>=0.3.4",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
development = [
    "black",
    "isort",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
